# BitEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  features.txt  run.sh
docs/: BitScript_doc.md
docs/bitscript/: doc.txt  ebnf  example.bitscript
res/: app.json  assets.json  configs.json  dialog_intro.json  dialog_market.json  entities.json  main.bitc  main.bitp  main.bitscript  style.json  variables.json
res_bitscript/: main.bitscript  style.json
src/: BitApp.cpp  BitDialog.cpp  BitEditor.cpp  BitEngine.cpp  BitJsonInterpreter.cpp  BitRenderer.cpp  BitScriptAnalyzer.cpp  BitScriptInterpreter.cpp  BitTool.cpp  RayDialog.cpp  RichText.cpp  UIStyle.cpp  main.cpp
src/headers/: BitApp.hpp  BitDialog.hpp  BitEditor.hpp  BitEngine.hpp  BitJsonInterpreter.hpp  BitRenderer.hpp  BitScriptAnalyzer.hpp  BitScriptInterpreter.hpp  RayDialog.hpp  RichText.hpp  UIStyle.hpp
